<resources>
    <string name="app_name">FilmApp</string>
    <string name="stars">Stars</string>
    <string name="director">Director</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="friends">Friends</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="genres">Genres:</string>
    <string name="filmography">Filmography</string>
    <string name="historySearches">Your searches</string>
    <string name="getStarted">Get started</string>
    <string name="login">Login</string>
    <string name="createAcc">Create an Account</string>
    <string name="signInAcc">Sign In Account</string>
    <string name="signUpToContinue">Sign up to continue</string>
    <string name="signInToContinue">Sign in to continue</string>
    <string name="email">EMAIL</string>
    <string name="emailHint">example@gmail.com</string>
    <string name="password">PASSWORD</string>
    <string name="passwordHint">password</string>
    <string name="alreadyHaveAcc">Already have an Account? Login</string>
    <string name="doNotHaveAcc">Do not have an Account? Sign Up</string>
    <string name="signInWithGoogle">Sign In with Google</string>
    <string name="similarMovies">Similar movies</string>
    <string name="searchExample">Film, show, series</string>
    <string name="startMatchTitle">To start swiping films, click on the start button. Right swipe - Like, left swipe - Dislike. Then you can find all the films you like in Favorite</string>
    <string name="startSwipe">Start</string>
    <string name="savedFilmsCollection">Favorite Collection</string>
    <string name="swipeFilmsCollection">Swipe Collection</string>
    <string name="films">Films</string>
    <string name="swipe">Swipe</string>
    <string name="collections">Collections</string>
    <string name="emptyHistory">Here will be your history searches</string>
    <string name="emptySearch">Sorry, we can not find films for your search</string>
    <string name="emptyFavorites">Here will be your saved Favorite films</string>
    <string name="emptySwipes">Here will be your saved Like swipes</string>
    <string name="favoriteFilms">Favorite films</string>
</resources>