<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signUpCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_registration">

        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/createAcc"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signUpSecondTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/signUpToContinue"
            android:textColor="@android:color/tertiary_text_dark" />

        <TextView
            android:id="@+id/signUpEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signUpEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangle_card"
            android:hint="@string/emailHint"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/secondary_text_dark" />

        <TextView
            android:id="@+id/signUpPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signUpPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangle_card"
            android:hint="@string/passwordHint"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textColorHint="@android:color/secondary_text_dark" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/holo_red"
            android:text="@string/getStarted" />

        <LinearLayout
            android:id="@+id/signUpGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/google_blue"
                android:text="@string/signInWithGoogle"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/signUpAlreadyRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:text="@string/alreadyHaveAcc"
            android:textColor="@android:color/secondary_text_dark"/>

    </LinearLayout>

</FrameLayout>