<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signInCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_registration">

        <TextView
            android:id="@+id/signInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/signInAcc"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signInSecondTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/signInToContinue"
            android:textColor="@android:color/tertiary_text_dark" />

        <TextView
            android:id="@+id/signInEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signInEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangle_card"
            android:hint="@string/emailHint"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/secondary_text_dark"/>

        <TextView
            android:id="@+id/signInPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signInPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangle_card"
            android:hint="@string/passwordHint"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textColorHint="@android:color/secondary_text_dark" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/login" />

        <LinearLayout
            android:id="@+id/signInGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/google_blue"
                android:text="@string/signInWithGoogle"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/signInAlreadyRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:text="@string/doNotHaveAcc"
            android:textColor="@android:color/secondary_text_dark"/>

    </LinearLayout>

</FrameLayout>